Adding drag-and-drop functionality for schedule element cards within the schedule field

--- a/src/components/Shedule/style.css
+++ b/src/components/Shedule/style.css
@@ -20,7 +20,7 @@
 .sheduleElement{
     border: 1px solid #ddd;
     padding: 4;
-    cursor: pointer;
+    /* cursor: pointer; */
     display: flex;
     justify-content: center;
     align-items: center;
