--- a/src/components/DndItem/style.css
+++ b/src/components/DndItem/style.css
@@ -3,10 +3,11 @@
     justify-content: space-between;
     align-items: center;
     background: #f5f5f5;
-    padding: 4px 8px;
     border-radius: 6px;
     cursor: default;
     user-select: none;
+    max-height: 100%;
+    width: 100%;
 }
 
 .scheduleElement__content{
