--- a/src/components/DndItem/style.css
+++ b/src/components/DndItem/style.css
@@ -6,7 +6,7 @@
     border-radius: 6px;
     cursor: default;
     user-select: none;
-    max-height: 100%;
+    height: 100%;
     width: 100%;
 }
 
