creating login roles

--- a/src/components/DndCell/style.css
+++ b/src/components/DndCell/style.css
@@ -6,5 +6,12 @@
 .sheduleElement__click{
     position:absolute;
     inset: 0;
+}
+
+.edit{
     cursor: pointer;
+}
+
+.read{
+    cursor: default;
 }
